--- a/index.html
+++ b/index.html
@@ -670,38 +670,207 @@
   </div>
 </section>
 
-    <!-- Partners Section -->
-    <section id="partners" class="clients section light-background">
-      <div class="container section-title" data-aos="fade-up">
-        <h2>Our Partners</h2>
-        <p>Trusted collaborations with leading Kenyan platforms and service providers</p>
-      </div>
+    <!-- Partners Slider: paste the <style> into your <head> (or above this section),
+     then paste the <section> where your other sections live.
+     Ensure Swiper JS/CSS is included (this template already loads swiper). -->
 
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
-        <div class="row g-4 justify-content-center align-items-center">
-          <div class="col-6 col-md-3 text-center">
-            <img src="assets/img/partners/mpesa.png" alt="M-Pesa" class="partner-logo img-fluid" />
-            <p class="mt-2 fw-semibold">M-Pesa</p>
+<style>
+  /* Partners Slider styles */
+  .partners-section {
+    padding: 3.5rem 0;
+  }
+
+  .partners-section .partner-card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: .6rem;
+    padding: .8rem;
+    background: transparent;
+    border-radius: .75rem;
+  }
+
+  .partners-section .partner-logo {
+    max-height: 76px;
+    max-width: 220px;
+    object-fit: contain;
+    filter: grayscale(100%);
+    opacity: .75;
+    transition: filter .25s ease, transform .25s ease, opacity .25s ease;
+    padding: 6px;
+  }
+
+  .partners-section .partner-logo:hover,
+  .partners-section .swiper-slide-active .partner-logo {
+    filter: none;
+    opacity: 1;
+    transform: translateY(-4px);
+  }
+
+  .partners-section .partner-name {
+    font-size: .875rem;
+    font-weight: 700;
+    color: #212529;
+    margin: 0;
+  }
+
+  /* Swiper buttons style (subtle) */
+  .partners-section .swiper-button-next,
+  .partners-section .swiper-button-prev {
+    color: rgba(13,202,240,0.95);
+    width: 36px;
+    height: 36px;
+    border-radius: 50%;
+    background: rgba(13,202,240,0.08);
+    box-shadow: 0 6px 18px rgba(2,6,23,0.06);
+  }
+
+  .partners-section .swiper-pagination-bullet {
+    background: rgba(13,202,240,0.35);
+    opacity: 1;
+  }
+
+  @media (max-width: 767.98px) {
+    .partners-section .partner-logo { max-height: 56px; }
+    .partners-section { padding: 2.2rem 0; }
+  }
+
+  /* Minor container tweak to center navigation */
+  .partners-section .swiper {
+    padding: 1rem 0 0.5rem;
+  }
+</style>
+
+<!-- Partners Section -->
+<section id="partners" class="clients section light-background partners-section">
+  <div class="container section-title" data-aos="fade-up">
+    <h2>Our Partners</h2>
+    <p>Trusted collaborations with leading Kenyan platforms and service providers</p>
+  </div>
+
+  <div class="container" data-aos="fade-up" data-aos-delay="100">
+    <!-- Swiper container -->
+    <div class="swiper partners-swiper" aria-label="Partners carousel">
+      <div class="swiper-wrapper align-items-center">
+        <!-- Slide: Equity Bank -->
+        <div class="swiper-slide text-center" role="group" aria-label="Equity Bank slide">
+          <div class="partner-card">
+            <img src="assets/img/partners/equity.png" alt="Equity Bank logo" class="partner-logo img-fluid mx-auto" />
+            <p class="partner-name">Equity Bank</p>
           </div>
-          <div class="col-6 col-md-3 text-center">
-            <img src="assets/img/partners/africastalking.png" alt="Africastalking" class="partner-logo img-fluid" />
-            <p class="mt-2 fw-semibold">Africastalking</p>
+        </div>
+
+        <!-- Slide: Cooperative Bank -->
+        <div class="swiper-slide text-center" role="group" aria-label="Cooperative Bank slide">
+          <div class="partner-card">
+            <img src="assets/img/partners/coop.png" alt="Cooperative Bank logo" class="partner-logo img-fluid mx-auto" />
+            <p class="partner-name">Co-operative Bank</p>
           </div>
-          <div class="col-6 col-md-3 text-center">
-            <img src="assets/img/partners/kenyan-banks.png" alt="Kenyan Banks" class="partner-logo img-fluid" />
-            <p class="mt-2 fw-semibold">Kenyan Banks</p>
+        </div>
+
+        <!-- Slide: KCB -->
+        <div class="swiper-slide text-center" role="group" aria-label="KCB slide">
+          <div class="partner-card">
+            <img src="assets/img/partners/kcb.png" alt="KCB Bank logo" class="partner-logo img-fluid mx-auto" />
+            <p class="partner-name">KCB</p>
           </div>
-          <div class="col-6 col-md-3 text-center">
-            <img src="assets/img/partners/deities.png" alt="Deities" class="partner-logo img-fluid" />
-            <p class="mt-2 fw-semibold">Deities</p>
+        </div>
+
+        <!-- Slide: M-Pesa -->
+        <div class="swiper-slide text-center" role="group" aria-label="M-Pesa slide">
+          <div class="partner-card">
+            <img src="assets/img/partners/mpesa.png" alt="M-Pesa logo" class="partner-logo img-fluid mx-auto" />
+            <p class="partner-name">M-Pesa</p>
           </div>
-          <div class="col-6 col-md-3 text-center">
-            <img src="assets/img/partners/e-times.png" alt="E-Times" class="partner-logo img-fluid" />
-            <p class="mt-2 fw-semibold">E-Times</p>
+        </div>
+
+        <!-- Slide: FODEP -->
+        <div class="swiper-slide text-center" role="group" aria-label="FODEP slide">
+          <div class="partner-card">
+            <img src="assets/img/partners/fodep.png" alt="FODEP logo" class="partner-logo img-fluid mx-auto" />
+            <p class="partner-name">FODEP</p>
+          </div>
+        </div>
+
+        <!-- Slide: Deities -->
+        <div class="swiper-slide text-center" role="group" aria-label="Deities slide">
+          <div class="partner-card">
+            <img src="assets/img/partners/deities.png" alt="Deities logo" class="partner-logo img-fluid mx-auto" />
+            <p class="partner-name">Deities</p>
+          </div>
+        </div>
+
+        <!-- Slide: Africa's Talking -->
+        <div class="swiper-slide text-center" role="group" aria-label="Africa's Talking slide">
+          <div class="partner-card">
+            <img src="assets/img/partners/africastalking.png" alt="Africa's Talking logo" class="partner-logo img-fluid mx-auto" />
+            <p class="partner-name">Africa's Talking</p>
+          </div>
+        </div>
+
+        <!-- Slide: M-Reside -->
+        <div class="swiper-slide text-center" role="group" aria-label="M-Reside slide">
+          <div class="partner-card">
+            <img src="assets/img/partners/m-reside.png" alt="M-Reside logo" class="partner-logo img-fluid mx-auto" />
+            <p class="partner-name">M-Reside</p>
           </div>
         </div>
       </div>
-    </section>
+
+      <!-- Navigation controls -->
+      <div class="swiper-button-prev" aria-label="Previous partner"></div>
+      <div class="swiper-button-next" aria-label="Next partner"></div>
+
+      <!-- Pagination -->
+      <div class="swiper-pagination" aria-hidden="false"></div>
+    </div>
+  </div>
+</section>
+
+<!-- Swiper init script (place near bottom of page, after Swiper JS is loaded) -->
+<script>
+  document.addEventListener('DOMContentLoaded', function () {
+    if (typeof Swiper === 'undefined') {
+      console.warn('Swiper not found — ensure Swiper JS/CSS are loaded before this script.');
+      return;
+    }
+
+    new Swiper('.partners-swiper', {
+      loop: true,
+      speed: 700,
+      spaceBetween: 30,
+      slidesPerView: 5,
+      centeredSlides: false,
+      autoplay: {
+        delay: 2200,
+        disableOnInteraction: false
+      },
+      navigation: {
+        nextEl: '.partners-swiper .swiper-button-next',
+        prevEl: '.partners-swiper .swiper-button-prev'
+      },
+      pagination: {
+        el: '.partners-swiper .swiper-pagination',
+        clickable: true
+      },
+      breakpoints: {
+        0:    { slidesPerView: 2, spaceBetween: 12 },
+        576:  { slidesPerView: 3, spaceBetween: 16 },
+        768:  { slidesPerView: 4, spaceBetween: 20 },
+        992:  { slidesPerView: 5, spaceBetween: 24 },
+        1200: { slidesPerView: 6, spaceBetween: 30 }
+      },
+      a11y: {
+        enabled: true,
+        prevSlideMessage: 'Previous partner',
+        nextSlideMessage: 'Next partner',
+        firstSlideMessage: 'This is the first slide',
+        lastSlideMessage: 'This is the last slide'
+      }
+    });
+  });
+</script>
 
     <!-- Contact Section -->
     <section id="contact" class="contact section">
@@ -717,7 +886,7 @@
               <i class="bi bi-geo-alt flex-shrink-0 fs-3 text-primary"></i>
               <div>
                 <h3>Address</h3>
-                <p>123 Tech Avenue, Nairobi, Kenya</p>
+                <p>Westlands Tech Avenue, Nairobi, Kenya</p>
               </div>
             </div>
 
@@ -725,7 +894,7 @@
               <i class="bi bi-telephone flex-shrink-0 fs-3 text-primary"></i>
               <div>
                 <h3>Call Us</h3>
-                <p>+254 700 123 456</p>
+                <p>+254 795 349610/ +254793664600</p>
               </div>
             </div>
 
@@ -733,7 +902,7 @@
               <i class="bi bi-envelope flex-shrink-0 fs-3 text-primary"></i>
               <div>
                 <h3>Email Us</h3>
-                <p>contact@swiftresidetech.co.ke</p>
+                <p>info@swiftresidetech.co.ke</p>
               </div>
             </div>
           </div>
@@ -789,10 +958,10 @@
             <span class="sitename">SwiftResideTech</span>
           </a>
           <div class="footer-contact pt-3">
-            <p>123 Tech Avenue</p>
+            <p>Westlands, Tech Avenue</p>
             <p>Nairobi, Kenya</p>
-            <p class="mt-3"><strong>Phone:</strong> <span>+254 700 123 456</span></p>
-            <p><strong>Email:</strong> <span>contact@swiftresidetech.co.ke</span></p>
+            <p class="mt-3"><strong>Phone:</strong> <span>+254 795349610/ +254793664600</span></p>
+            <p><strong>Email:</strong> <span>info@swiftresidetech.co.ke</span></p>
           </div>
           <div class="social-links d-flex mt-4">
             <a href="#" aria-label="Twitter"><i class="bi bi-twitter"></i></a>
@@ -843,9 +1012,6 @@
 
     <div class="container copyright text-center mt-4">
       <p>© <span>Copyright</span> <strong class="px-1 sitename">SwiftResideTech</strong> <span>All Rights Reserved</span></p>
-      <div class="credits">
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-      </div>
     </div>
   </footer>
 
